--- a/.github/workflows/update_pubip_worklflow.yaml
+++ b/.github/workflows/update_pubip_worklflow.yaml
@@ -16,7 +16,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Dependencies
         run:
-          pip install requests
-          pip install os
-      - name: run python Script
-        run: python3 pubip_updater.py
+          source /home/ianl303/github_actions/update_pubip/bin/activate
+          pip -V
+#          python3 -m pip install requests
+#          python3 -m pip install os
+#      - name: run python Script
+#        run: python3 pubip_updater.py
