--- a/.github/workflows/update_pubip_worklflow.yaml
+++ b/.github/workflows/update_pubip_worklflow.yaml
@@ -18,9 +18,11 @@ jobs:
         run: |
           source /home/ianl303/github-actions/update_pubip/bin/activate 
           python3 -m pip install requests
-          python3 -m pip install os
-#      - name: run python Script
-#        run: python3 pubip_updater.py
+          python3 -m pip install os_sys
+      - name: run python Script
+        with:
+          CLOUDFLARE_TOKEN: ${{secrets.CLOUDFLARE_TOKEN}}
+        run: python3 pubip_updater.py
       - name: Cleanup
         run: |
           deactivate
