--- a/.github/workflows/update_pubip_worklflow.yaml
+++ b/.github/workflows/update_pubip_worklflow.yaml
@@ -11,6 +11,8 @@ on:
 jobs:
   run-py:
     runs-on: self-hosted
+    env:
+      CLOUDFLARE_TOKEN: ${{secrets.CLOUDFLARE_TOKEN}}
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -22,7 +24,9 @@ jobs:
       - name: run python Script
         env:
           CLOUDFLARE_TOKEN: ${{secrets.CLOUDFLARE_TOKEN}}
-        run: python3 pubip_updater.py
+        run: |
+          echo "$CLOUDFLARE_TOKEN"
+#          python3 pubip_updater.py
       - name: Cleanup
         run: |
           deactivate
