--- a/.github/workflows/update_pubip_worklflow.yaml
+++ b/.github/workflows/update_pubip_worklflow.yaml
@@ -11,8 +11,6 @@ on:
 jobs:
   run-py:
     runs-on: self-hosted
-    env:
-      CLOUDFLARE_TOKEN: ${{secrets.CLOUDFLARE_TOKEN}}
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -25,8 +23,7 @@ jobs:
         env:
           CLOUDFLARE_TOKEN: ${{secrets.CLOUDFLARE_TOKEN}}
         run: |
-          echo "$CLOUDFLARE_TOKEN"
-#          python3 pubip_updater.py
+          python3 pubip_updater.py
       - name: Cleanup
         run: |
           deactivate
