change deactivate command

--- a/.github/workflows/update_pubip_worklflow.yaml
+++ b/.github/workflows/update_pubip_worklflow.yaml
@@ -26,4 +26,4 @@ jobs:
           python3 pubip_updater.py
       - name: Cleanup
         run: |
-          deactivate
+          source deactivate
