--- a/.github/workflows/update_pubip_worklflow.yaml
+++ b/.github/workflows/update_pubip_worklflow.yaml
@@ -1,16 +1,14 @@
 name: Update Cloudflare Public IP
 
 on:
-  push:
-    branches:
-      - main
-      - feat/add_workflow
-  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
 
 
 jobs:
   run-py:
     runs-on: self-hosted
+    timeout-minutes: 120
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -18,7 +16,6 @@ jobs:
         run: |
           source /home/ianl303/github-actions/update_pubip/bin/activate 
           python3 -m pip install requests
-#          python3 -m pip install os_sys
       - name: run python Script
         env:
           CLOUDFLARE_TOKEN: ${{secrets.CLOUDFLARE_TOKEN}}
